--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rails-erb-loader": "^5.0.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
+    "react-bootstrap-table": "^3.3.6",
     "react-dom": "^15.5.4",
     "react-fittext": "^0.0.7",
     "recharts": "^0.22.4",
